--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 OPENAI_API_KEY=
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=
-BASE_URL=
+BASE_URL="https://mandate-wizard-recent-amber.vercel.app"
 
 
 NEXT_PUBLIC_SUPABASE_URL=
